--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,6 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -32,18 +31,22 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	
-	
+	 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 	
-	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCQYJ8QeCbAPiCXZJpqmQCvT65rEGvYls4&libraries=places,geometry&sensor=true"></script>
+	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDDySLNNrWBvkVvINCjftsEluenDiHLLso&libraries=places,geometry&sensor=true"></script>
+	
+	<!--<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD363lFQXhEOTKFq6sQ-WWp3i5P6UD47HY&libraries=places,geometry&sensor=true"></script>-->
+
+	<!--latest<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAglWQ1-02gTIzhcaH7HHbgLf9oRhpBsj8&libraries=places,geometry&sensor=true"></script>->
+	<!--recent--<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCQYJ8QeCbAPiCXZJpqmQCvT65rEGvYls4&libraries=places,geometry&sensor=false"></script>-->
 	
 	<!--<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC9ArO-bNLXYWhAbrnpRQC0jY_WrlfrAE8&libraries=places,geometry&sensor=true"></script>-->
 	
 	<script src="js/ng-cordova.min.js"></script>
-
+	<!--<script src="js/directives.js"></script>-->
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
